2013-08-21  Tim Horton  <timothy_horton@apple.com>

        REGRESSION(r154399): broke Mac ML debug WK1 tests > 50 crashes (Requested by thorton on #webkit).
        https://bugs.webkit.org/show_bug.cgi?id=120129

        Rolling out http://trac.webkit.org/changeset/154399.

        * rendering/RenderBlock.cpp:
        * rendering/RenderBlock.h:
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::LineBreaker::skipLeadingWhitespace):
        * rendering/RenderBox.h:

2013-08-21  Andreas Kling  <akling@apple.com>

        <https://webkit.org/b/120118> Frame::animation() should return a reference.

        Reviewed by Anders Carlsson.

        Frame::m_animationController is never null.
        Also changed RenderObject::animation() to return a reference since it's just a wrapper
        around RenderObject::frame()->animation() with no null checking of frame().

2013-08-21  Simon Fraser  <simon.fraser@apple.com>

        Allow opacity to apply to custom scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=120104

        Reviewed by David Hyatt.
        
        Opacity was ignored custom scrollbar pseudoelements because custom scrollbar
        renderers never create layers, and opacity is normally handled by the RenderLayer code.
        
        Fix by having RenderScrollbarTheme and RenderScrollbarPart do the transparency
        layers necessary for opacity. RenderScrollbarPart handles opacity for individual
        parts.
        
        Because ScrollbarThemeComposite::paint() renders the parts on after another (with
        no nesting), opacity handling for the entire scrollbar needs special-casing.
        This is done by willPaintScrollbar()/didPaintScrollbar() on the theme.
        RenderScrollbarTheme consults the opacity the scrollbar (which we get from
        the ScrollbarBGPart renderer) to decide whether to set up a transparency layer.

        Test: scrollbars/scrollbar-parts-opacity.html
